Update and rename AB Test lab.ipynb to EDA abd AB Test lab.ipynb

--- a/EDA abd AB Test lab.ipynb
+++ b/EDA abd AB Test lab.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Conduct an A/B test**\n",
+    "# **Conduct EDA and A/B test**\n",
     "**The goal** is to apply descriptive statistics and hypothesis testing in Python. The goal for this A/B test is to sample data and analyze whether there is a relationship between payment type and fare amount. For example: discover if customers who use credit cards pay higher fare amounts than customers who use cash."
    ]
   },
