--- a/EDA abd AB Test lab.ipynb
+++ b/EDA abd AB Test lab.ipynb
@@ -5,7 +5,12 @@
    "metadata": {},
    "source": [
     "# **Conduct EDA and A/B test**\n",
-    "**The goal** is to apply descriptive statistics and hypothesis testing in Python. The goal for this A/B test is to sample data and analyze whether there is a relationship between payment type and fare amount. For example: discover if customers who use credit cards pay higher fare amounts than customers who use cash."
+    "**The goal** is to apply descriptive statistics and hypothesis testing in Python. The goal for this A/B test is to sample data and analyze whether there is a relationship between payment type and fare amount. For example: discover if customers who use credit cards pay higher fare amounts than customers who use cash.\n",
+    "\n",
+    "**Note:** For the purpose of this exercise, assume that the sample data comes from an experiment in\n",
+    "which customers are randomly selected and divided into two groups: 1) customers who are required\n",
+    "to pay with credit card, 2) customers who are required to pay with cash. Without this assumption,\n",
+    "we cannot draw causal conclusions about how payment method affects fare amount.\n"
    ]
   },
   {
