Update and rename Automatidata_project_lab_jupterschedule (1).ipynb to Machine Learning.ipynb

--- a/Machine Learning.ipynb
+++ b/Machine Learning.ipynb
@@ -6,7 +6,7 @@
         "id": "DtNBZFHO3M7n"
       },
       "source": [
-        "# **Build a Machine learning model**\n",
+        "# **Build a Machine Learning model**\n",
         "\n",
         "**Scenario:** A Taxi company requested to build a machine learning model to predict if a customer will not leave a tip. They want to use the model in an app that will alert taxi drivers to customers who are unlikely to tip, since drivers depend on tips.\n",
         "\n",
@@ -2060,18 +2060,6 @@
         "outputId": "9d945ab5-e9be-4b4e-9a59-20d44589713a"
       },
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-23-a59725839d37>:1: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  df0[\"tip_percent\"] = (df0[\"tip_amount\"]/(df0[\"total_amount\"]-df0[\"tip_amount\"])).round(3)\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
